# juno-waterphase-analysis

./: CMakeLists.txt  README.md  compile.sh
InstallArea/: setup.csh
InstallArea/python/JUNOStarter/: __init__.py
JUNOStarter/: CMakeLists.txt
JUNOStarter/share/: run_single.sh  run_sr.py  test.sh
JUNOStarter/src/: JUNOStarter.cc  JUNOStarter.h
JUNOStarterESD/: CMakeLists.txt
JUNOStarterESD/python/JUNOStarterESD/: __init__.py
JUNOStarterESD/share/: 3840.list  run_single.sh  run_sr.py  test.root  test.sh
JUNOStarterESD/src/: JUNOStarterESD.cc  JUNOStarterESD.h  JunoCoordinateSystem.cc  JunoCoordinateSystem.h  SolTrack.h  SolarAngle.cc  SolarAngle.h
